Removed all bugs reported by findbugs.